<resources>
    <string name="app_name">Feedly</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="skip">Skip</string>
    <string name="pass">*********</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="user_id">User ID</string>
    <string name="category_headlines">Headlines</string>
    <string name="category_technology">Technology</string>
    <string name="category_sports">Sports</string>
    <string name="category_business">Business</string>
    <string name="category_world">World</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_science">Science</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="admob_app_id">ca-app-pub-5798395965775186~8938142200</string>
    <string name="admob_ad_unit_id">ca-app-pub-5798395965775186/7710844532</string>
    <string name="ad">Ad</string>
    <string name="waiting_for_onesignal">Waiting for OneSignal...</string>
    <string name="skip_login"><![CDATA[Skip Login >>]]></string>
    <string name="key">15b744f890084f54b6f1141cf2e12e84</string>
</resources>
