<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_id"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEdittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:hint="@string/abc_gmail_com"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passEdittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingBottom="20dp" />

        <CheckBox
            android:id="@+id/chk_showpassword"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:onClick="onLogin"
            android:tag="signin"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_view"
        android:layout_centerInParent="true"
        android:text="@string/skip" />

</RelativeLayout>